default/objects/Loan_Milestone__c/Loan_Milestone__c.object-meta.xml
<CustomObject>
    <label>Loan Milestone</label>
    <nameField>
        <label>Loan Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>