default/objects/Loan_Milestone__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>