default/objects/Loan_Milestone__c/fields/Days_in_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Milestone__c</fullName>
    <label>Days in Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>