default/objects/Loan_Milestone__c/fields/Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date__c</fullName>
    <label>Milestone Date</label>
    <type>DateTime</type>
</CustomField>