default/objects/Loan_Milestone__c/fields/Milestone_Index__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Index__c</fullName>
    <label>Milestone Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>